# vibe-cast

./: AGENTS.md  ALBUM_PICKER_FIX.md  APPLESCRIPT_SYNTAX_FIX.md  ARCHITECTURE.md  DEBUG_FIXES.md  DEBUG_MESSAGE_ISSUE.md  DEBUG_TEST.md  FILE_LOADING_FEATURE.md  INSTALLATION.md  PHOTO_SLIDESHOW_IMPLEMENTATION_SUMMARY.md  README.md  SHARED_ALBUMS_UPDATE.md  eslint.config.js  index.html  lint_report.txt  package-lock.json  package.json  vite.config.ts
.beads/: issues.jsonl
.beads/formulas/: standard-epic.formula.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  FINAL_ALBUMS_FIX.md  PERFORMANCE_AND_ALBUM_FIXES.md  PHOTO_ALBUMS_ANALYSIS.md  PHOTO_SLIDESHOW_PLUGIN.md  RELEASE.md  SEARCHABLE_ALBUM_SELECTOR.md  UI_CRASH_FIX.md  YOUTUBE_PLUGIN.md  YOUTUBE_PLUGIN_SUMMARY.md
public/: youtube_player.html
scripts/: create_release.mjs  e2e_config.json  e2e_flow_test.mjs  e2e_test.sh  kill-port.mjs
scripts/__tests__/: create_release.test.ts
src/: App.css  App.tsx  index.css  main.tsx  router.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app/: Cargo.toml  tauri.conf.json
src-tauri/crates/app/capabilities/: default.json
src-tauri/crates/app/icons/: icon.icns
src-tauri/crates/app/src/: lib.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: lib.rs
src-tauri/crates/models/: Cargo.toml
src-tauri/crates/models/src/: lib.rs
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server/src/: lib.rs
src-tauri/crates/state/: Cargo.toml
src-tauri/crates/state/src/: lib.rs
src-tauri/src/: audio.rs  lib.rs  server.rs
src-tauri/tests/: config_load.rs
src/__tests__/: configRoundtrip.test.ts  configSerialization.test.ts  defaultPresets.test.ts  messageSplit.test.ts  messageTreeSerialization.test.ts
src/components/: AlbumSelectorModal.tsx  ControlPlane.tsx  ErrorBoundary.tsx  Fireplace.tsx  HelpModal.tsx  Marquee.tsx  RemoteControl.tsx  TechnoViz.tsx  VisualizerWindow.tsx  messageStyleOverrides.ts  messageTreeDnd.ts
src/config/: defaultConfig.json
src/hooks/: useAppState.ts
(+68 files in other folders)
