[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/models",
    "crates/state",
    "crates/audio",
    "crates/server",
]
default-members = ["crates/app"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Maximum size reduction optimizations
lto = true        # Enable Link Time Optimization
strip = true      # Strip symbols from binary
panic = "abort"   # Abort on panic
