[package]
name = "vibe_cast"
version = "0.2.8"
description = "A Tauri VibeCast App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vibe-cast-models = { path = "../models" }
vibe-cast-state = { path = "../state" }
vibe-cast-server = { path = "../server" }
vibe-cast-audio = { path = "../audio" }
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"

