[package]
name = "vibe-cast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tauri = { version = "2" }
vibe-cast-state = { path = "../state" }
vibe-cast-models = { path = "../models" }
mime_guess = "2"
